--- a/OnlineJudge/OnlineJudge/src/main/resources/application.properties
+++ b/OnlineJudge/OnlineJudge/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=OnlineJudge
-file.upload-dir=./uploaded-sources
-file.compiled-dir=./compiled-classes
+file.upload-dir=./OnlineJudge/OnlineJudge/uploaded-sources
+file.compiled-dir=./OnlineJudge/OnlineJudge/compiled-classes
